--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +8,47 @@
   <title>Стартовый шаблон</title>
   <link href="css/style.min.css" rel="stylesheet preload" as="style">
 </head>
+
 <body class="body">
   <header class="header">
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Виды велосипедов</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Видео про велосипеды</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-      </ul>
-    </nav>
-    <button class="header__toggle">
-      <span class="visually-hidden">Открыть меню</span>
-    </button>
-    <div class="header__title-wrapper">
-      <div class="header__logo">
-        <a href="#" class="header__logo-link">
-          <svg width="67" height="20" viewBox="0 0 67 20">
-            <use xlink:href="img/sprite.svg#logo"></use>
-          </svg>
-        </a>
+    <div class="header__container container">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#" class="nav__link">О нас</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Виды велосипедов</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Видео про велосипеды</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
+        </ul>
+      </nav>
+      <button class="header__toggle">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="header__wrapper">
+        <div class="header__title-wrapper">
+          <div class="header__logo">
+            <a href="#" class="header__logo-link">
+              <svg width="69" height="21" viewBox="0 0 69 21">
+                <use xlink:href="img/sprite_auto.svg#icon-logo"></use>
+              </svg>
+            </a>
+          </div>
+          <h1 class="header__title title">Мы продаем велосипеды</h1>
+          <p>Наш магазин отбирает только самые лучшие<br> велосипеды для продажи</p>
+        </div>
+        <div class="header__form-wrapper">
+          <p>Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
+          <form action="">
+            <label class="visually-hidden" for="name"></label>
+            <input type="text" id="name" placeholder="Введите Ваше Имя" required>
+            <label class="visually-hidden" for="tel"></label>
+            <input type="number" id="tel" placeholder="Введите Ваш номер телефона" required>
+            <button type="submit">Подобрать велосипед мечты</button>
+          </form>
+        </div>
       </div>
-      <h1 class="header__title title">Мы продаем велосипеды</h1>
-      <p>Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
-    </div>
-    <div class="header__form-wrapper">
-      <p>Заполните поля ниже и мы подберем велосипед Вашей мечты</p>
-      <form action="">
-        <label class="visually-hidden" for="name"></label>
-        <input type="text" id="name" placeholder="Введите Ваше Имя">
-        <label class="visually-hidden" for="tel"></label>
-        <input type="tel" id="tel" placeholder="Введите Ваш номер телефона">
-        <button type="submit">Подобрать велосипед мечты</button>
-      </form>
     </div>
   </header>
   <script src="js/script.js"></script>
 </body>
+
 </html>
