--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
   </header>
   <main class="main">
     <section class="about">
-      <div class="about__container container">
+      <div class="about__container">
         <h2><a name="about">Несколько фактов о нас</a></h2>
         <ul class="about__list">
           <li class="about__item">
@@ -122,7 +122,7 @@
   <footer>
     <section class="map">
       <div class="map__container container">
-        <h2 class="map__title title"><a name="map">Как нас найти?</a></h2>
+        <h2 class="map__title"><a name="map">Как нас найти?</a></h2>
         <p>Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124007!2d30.320894616173568!3d59.93879686904788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1645145060077!5m2!1sru!2sru"
